[tool.poetry]
name = "tracker"
version = "0.0.2"
description = ""
authors = ["Laszlo Balo <laszloxd@gmail.com>"]
readme = "README.md"
packages = [{ include = "tracker" }]

[tool.poetry.dependencies]
python = "^3.9"
panel = "^0.14.2"
hvplot = "^0.8.2"
holoviews = "^1.15.3"
pandas = "^1.5.2"
numpy = "^1.24.1"
dynaconf = "^3.1.11"
pydantic = "^1.10.4"
plotly = "^5.11.0"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"
coverage = "^7.0.1"
sphinx = "^6.0.0"
jupyterlab = "^3.5.2"
pyparsing = "^3.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
